test/popular_gems/rails.error
forspell git:(master) ✗ bundle exec ./bin/forspell ../rails/.yardoc experiments/rails.log
bundler: failed to load command: ./bin/forspell (./bin/forspell)
Racc::ParseError: RD syntax error: line 848:
...This makes sense if you think about it: if you were to call <tt>post.tags.delete(Tag.find_by(name: 'food ')) </tt> you would want the 'food' tag to be unlinked from the post, rather than for the tag itself to be removed from the database. ...
                                                                                                            ^^^

  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd/inline_parser.rb:198:in `on_error'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/racc/parser.rb:259:in `_racc_do_parse_c'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/racc/parser.rb:259:in `do_parse'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd/inline_parser.rb:101:in `parse'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd/block_parser.rb:388:in `paragraph'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd/block_parser.rb:747:in `_reduce_14'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/racc/parser.rb:259:in `_racc_do_parse_c'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/racc/parser.rb:259:in `do_parse'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd/block_parser.rb:91:in `parse'
  /Users/kkuprikov/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/rdoc/rd.rb:86:in `parse'
  /Users/kkuprikov/forspell/lib/loaders/yardoc_loader.rb:52:in `extract_text'
  /Users/kkuprikov/forspell/lib/loaders/yardoc_loader.rb:43:in `block in process'
  /Users/kkuprikov/forspell/lib/loaders/yardoc_loader.rb:42:in `map'
  /Users/kkuprikov/forspell/lib/loaders/yardoc_loader.rb:42:in `process'
  /Users/kkuprikov/forspell/lib/forspell.rb:32:in `process'
  /Users/kkuprikov/forspell/bin/forspell:4:in `<top (required)>'